--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,21 @@ h6 {
 
 }
 
+.towhite{
+    color: rgb(0, 0, 0);
+}
+
+.toblack{
+    background: #00B4DB;
+    background: linear-gradient(to right, #0083B0, #00B4DB);
+}
+
+.dark-mode{
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    z-index: 10;
+}
 
 
 .homepage {
@@ -213,8 +228,6 @@ h6 {
 
 
 .profile {
-    background: #00B4DB;
-    background: linear-gradient(to right, #0083B0, #00B4DB);
     min-height: 300px;
     min-width: 100%;
     padding: 7% 3%;
@@ -257,12 +270,13 @@ background: linear-gradient(to right, #0b8793, #360033); */
     margin: 0 2.5%;
     margin-top: -200px;
     background-color: white;
+    color: rgb(65, 65, 65);
     border-radius: 30px;
     text-align: center;
-    color: rgb(65, 65, 65);
     margin-bottom: 100px;
     box-shadow: 1px 2px #d4d2d2;
     border: 0.5px solid #d4d2d2;
+    z-index: 5;
 }
 
 
@@ -402,8 +416,8 @@ background: linear-gradient(to right, #0b8793, #360033); */
 .contact-detail {
     min-height: 100%;
     width: 90%;
-    background-color: #130f40;
-    background-image: linear-gradient(315deg, #130f40 0%, #000000 74%);
+    background: #130f40;
+    background: linear-gradient(315deg, #130f40 0%, #000000 74%);
     border-radius: 20px;
     top: 0;
     bottom: 0;
@@ -432,13 +446,12 @@ background: linear-gradient(to right, #0b8793, #360033); */
 .contact-detail button:hover {
     background-color: white;
     color: black;
+   
 
 }
 
 .footer {
     position: absolute;
-    background: #00B4DB;
-    background: linear-gradient(to right, #0083B0, #00B4DB);
     min-height: 400px;
     min-width: 100%;
     z-index: -1;
@@ -493,7 +506,7 @@ background: linear-gradient(to right, #0b8793, #360033); */
 
 .icon-circle:hover{
 background-color: white;
-color: #0083B0;
+color: black;
 }
 
 
